--- a/translations/kangyur/placeholders/103-003_toh4568-2-chapter_2_overview_of_how_those_teachings_were_preserved_in_this_world.xml
+++ b/translations/kangyur/placeholders/103-003_toh4568-2-chapter_2_overview_of_how_those_teachings_were_preserved_in_this_world.xml
@@ -6,14 +6,14 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">Chapter 2: Overview of How Those Teachings Were Preserved in This World</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gnyis pa/ bstan pa de dzam+bu'i gling du ji ltar bskyangs pa'i tshul rags pa tsam zhig bshad pa'i yal 'dab/</title>
-                <title type="otherTitle" xml:lang="zh">第二章 ｜ 有關教法是如何保存於此世界的概述</title>
+                <title type="otherTitle" xml:lang="zh">德格版甘珠爾經文目錄：第二章 有關教法是如何保存於此世界的概述</title>
                 <author role="translatorMain" ref="contributors.xml#team-49"/>
                 <author role="translatorEng" ref="contributors.xml#person-60">Benjamin Ewing</author>
                 <author role="translatorEng" ref="contributors.xml#person-67">Lowell Cook</author>
                 <sponsor ref="eft:sponsor-219">anonymous </sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2021</date>
+                <edition>v 0.0.7 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -32,15 +32,16 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-12-24T05:49:56.349Z" user="cabie-sim">24/12/2021 05:49:56</note>
-    <note type="updated" update="translation-status" value="3" date-time="2021-02-22T13:28:00.965Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-02-22T13:28:00.965Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-22T13:28:34.954Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-02-22T13:28:49.726Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:49:26.949Z" user="admin">26/07/2022 07:49:26</note>
+                <note type="updated" update="translation-status" value="3" date-time="2021-02-22T13:28:00.965Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-02-22T13:28:00.965Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-22T13:28:34.954Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-02-22T13:28:49.726Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2021-05-10T16:46:49.723Z" user="amy">Auto (update-titles)</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-07-05T16:27:00.733Z" user="mike">summary added</note>
-    <note type="updated" update="text-version" value="0.0.6" date-time="2021-12-24T05:49:52.05Z" user="cabie-sim">Auto (update-sponsorship)</note>
-</notesStmt>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2021-07-05T16:27:00.733Z" user="mike">summary added</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2021-12-24T05:49:52.05Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-07-26T07:49:19.331Z" user="cabie-sim">Auto (update-titles)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
