--- a/translations/kangyur/placeholders/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
+++ b/translations/kangyur/placeholders/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
@@ -6,7 +6,7 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">Chapter 3: Publication History of the Conqueror's Extant Scriptures</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gsum pa/ rgyal ba'i gsung rab gangs ri'i khrod du deng sang ji tsam snang ba par du bsgrubs pa'i byung ba dngos legs par bshad pa'i yal 'dab/</title>
-                <title type="otherTitle" xml:lang="zh">第三章｜有關耆那（佛陀）之教法的出版歷史的解釋 </title>
+                <title type="otherTitle" xml:lang="zh">德格版甘珠爾經文目錄：第三章 有關耆那（佛陀）之教法的出版歷史的解釋</title>
                 <author role="translatorMain" ref="contributors.xml#team-49"/>
                 <author role="translatorEng" ref="contributors.xml#person-67">Lowell Cook</author>
                 <author role="translatorEng" ref="contributors.xml#person-60">Benjamin Ewing</author>
@@ -15,7 +15,7 @@
                 <sponsor ref="eft:sponsor-219">anonymous </sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2020</date>
+                <edition>v 0.0.9 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.g">
@@ -34,20 +34,21 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-12-24T05:50:25.889Z" user="cabie-sim">24/12/2021 05:50:25</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-08-17T14:45:05.214Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="3" date-time="2020-08-17T14:45:05.214Z" user="line-tofte">3</note>
-    <note type="updated" update="publication-date" value="" date-time="2020-08-17T14:45:05.214Z" user="line-tofte"/>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-09-10T06:42:56.412Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2020-09-15T06:50:46.694Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-03-16T08:31:25.909Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-03-16T08:31:25.909Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:50:05.357Z" user="admin">26/07/2022 07:50:05</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-08-17T14:45:05.214Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2020-08-17T14:45:05.214Z" user="line-tofte">3</note>
+                <note type="updated" update="publication-date" value="" date-time="2020-08-17T14:45:05.214Z" user="line-tofte"/>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-09-10T06:42:56.412Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2020-09-15T06:50:46.694Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2021-03-16T08:31:25.909Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-03-16T08:31:25.909Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2021-05-10T16:48:19.101Z" user="amy">Auto (update-titles)</note>
-    <note type="updated" update="text-version" value="0.0.6" date-time="2021-07-05T16:27:29.134Z" user="mike">summary added</note>
-    <note type="updated" update="translation-status" value="2.g" date-time="2021-09-10T10:43:28.635Z" user="line-tofte">2.g</note>
-    <note type="updated" update="text-version" value="0.0.7" date-time="2021-09-10T10:43:28.635Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.8" date-time="2021-12-24T05:50:21.594Z" user="cabie-sim">Auto (update-sponsorship)</note>
-</notesStmt>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2021-07-05T16:27:29.134Z" user="mike">summary added</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2021-09-10T10:43:28.635Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2021-09-10T10:43:28.635Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2021-12-24T05:50:21.594Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2022-07-26T07:49:57.737Z" user="cabie-sim">Auto (update-titles)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
