--- a/translations/kangyur/placeholders/103-006_toh4568-5-chapter_5_purpose_and_benefits_of_this_publication_together_with_dedication_prayers.xml
+++ b/translations/kangyur/placeholders/103-006_toh4568-5-chapter_5_purpose_and_benefits_of_this_publication_together_with_dedication_prayers.xml
@@ -4,12 +4,13 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">lnga pa/ de ltar bzhengs pa'i dgos ched phan yon bsngo smon dang bcas pa legs par bshad pa'i yal 'dab/</title>
                 <title type="mainTitle" xml:lang="en">Chapter 5: Purpose and Benefits of This Publication, Together with Dedication Prayers</title>
-                <title type="otherTitle" xml:lang="zh">第五章｜此出版物的目的與利益，以及迴向文 </title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">lnga pa/ de ltar bzhengs pa'i dgos ched phan yon bsngo smon dang bcas pa legs par bshad pa'i yal 'dab/</title>
+                <title type="otherTitle" xml:lang="zh">德格版甘珠爾經文目錄：第五章 此出版物的目的與利益，以及迴向文</title>
+                <sponsor ref="eft:sponsor-219">anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2021</date>
+                <edition>v 0.0.5 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="">
@@ -27,9 +28,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-07-05T16:28:38.102Z" user="admin">05/07/2021 16:28:38</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:51:21.815Z" user="admin">26/07/2022 07:51:21</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-10T16:49:28.988Z" user="amy">Auto (update-titles)</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-05T16:28:34.927Z" user="mike">summary added</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-05T16:28:34.927Z" user="mike">summary added</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-12-24T05:49:18.298Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-12-24T05:51:17.874Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-26T07:51:19.814Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
