--- a/translations/kangyur/translations/090-042_toh598-the_practice_of_the_incantation_of_usnisavijaya.xml
+++ b/translations/kangyur/translations/090-042_toh598-the_practice_of_the_incantation_of_usnisavijaya.xml
@@ -24,10 +24,10 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.3 <date>2022</date>
+                <edition>v 1.2.1 <date>2022</date>
                 </edition>
             </editionStmt>
-      <publicationStmt status="1.a">
+      <publicationStmt status="2">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
@@ -60,7 +60,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-07-26T07:38:14.643Z" user="admin">26/07/2022 07:38:14</note>
+        <note type="lastUpdated" date-time="2022-07-26T16:17:00.698Z" user="admin">26/07/2022 16:17:00</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-12-10T12:58:16.058Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-12-10T12:58:16.058Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-12-16T08:24:15.715Z" user="line-tofte">3</note>
@@ -96,6 +96,8 @@
         <note type="updated" update="text-version" value="1.1.1" date-time="2022-07-22T15:18:28.92Z" user="john">Further edits and 2 glossary entries.</note>
         <note type="updated" update="text-version" value="1.1.2" date-time="2022-07-22T15:38:21.416Z" user="john">Typo</note>
           <note type="updated" update="text-version" value="1.1.3" date-time="2022-07-26T07:38:07.099Z" user="cabie-sim">Auto (update-titles)</note>
+          <note type="updated" update="translation-status" value="2" date-time="2022-07-26T16:16:52.983Z" user="john">2</note>
+          <note type="updated" update="text-version" value="1.2.1" date-time="2022-07-26T16:16:52.983Z" user="john">Withdrawn from publication pending decisions about the dhāraṇī.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
