--- a/translations/kangyur/translations/090-039_toh595-the_usnisavijaya_dharani_with_its_ritual_manual.xml
+++ b/translations/kangyur/translations/090-039_toh595-the_usnisavijaya_dharani_with_its_ritual_manual.xml
@@ -25,10 +25,10 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.1 <date>2022</date>
+                <edition>v 0.1.1 <date>2022</date>
                 </edition>
             </editionStmt>
-      <publicationStmt status="1.a">
+      <publicationStmt status="2">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
@@ -59,7 +59,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-07-26T07:35:41.271Z" user="admin">26/07/2022 07:35:41</note>
+        <note type="lastUpdated" date-time="2022-07-26T16:37:42.324Z" user="admin">26/07/2022 16:37:42</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:57:20.806Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-02T13:57:20.806Z" user="line-tofte">Auto
@@ -107,6 +107,8 @@
         <note type="updated" update="translation-status" value="1.a" date-time="2022-07-11T08:23:31.074Z" user="sameer">1.a</note>
         <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-11T08:23:31.074Z" user="sameer">First published version</note>
           <note type="updated" update="text-version" value="1.0.1" date-time="2022-07-26T07:35:33.521Z" user="cabie-sim">Auto (update-titles)</note>
+          <note type="updated" update="translation-status" value="2" date-time="2022-07-26T16:37:34.711Z" user="john">2</note>
+          <note type="updated" update="text-version" value="0.1.1" date-time="2022-07-26T16:37:34.711Z" user="john">Withdrawn from publication.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
