--- a/translations/kangyur/translations/090-040_toh596-the_usnisavijaya_dharani_with_its_ritual_manual.xml
+++ b/translations/kangyur/translations/090-040_toh596-the_usnisavijaya_dharani_with_its_ritual_manual.xml
@@ -31,7 +31,7 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2022</date>
+                <edition>v 0.2.1 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -65,7 +65,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-07-15T10:34:40.091Z" user="admin">15/07/2022 10:34:40</note>
+        <note type="lastUpdated" date-time="2022-07-26T16:42:24.736Z" user="admin">26/07/2022 16:42:24</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-12-10T12:57:42.226Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-10T12:57:42.226Z" user="line-tofte">Auto
@@ -100,6 +100,7 @@
         <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-30T09:49:05.618Z" user="line-tofte">Auto (update-contributors)</note>
           <note type="updated" update="translation-status" value="1.a" date-time="2022-07-15T10:34:32.228Z" user="sameer">1.a</note>
           <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-15T10:34:32.228Z" user="sameer">First published version</note>
+          <note type="updated" update="text-version" value="0.2.1" date-time="2022-07-26T16:42:20.864Z" user="john">Withdrawn from publication pending decisions about the dhāraṇī.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
