--- a/translations/kangyur/translations/090-041_toh597,984-the_usnisavijaya_dharani.xml
+++ b/translations/kangyur/translations/090-041_toh597,984-the_usnisavijaya_dharani.xml
@@ -37,7 +37,7 @@
                                         Gu</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.2 <date>2022</date>
+                <edition>v 1.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -93,7 +93,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-07-26T07:39:41.846Z" user="admin">26/07/2022 07:39:41</note>
+                                <note type="lastUpdated" date-time="2022-07-26T18:13:25.478Z" user="admin">26/07/2022 18:13:25</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:52:50.454Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-10T08:52:50.454Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-08T09:50:56.094Z" user="line-tofte">Auto
@@ -133,6 +133,7 @@
                                 <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-15T10:59:19.387Z" user="sameer">First published version</note>
                                 <note type="updated" update="text-version" value="1.0.1" date-time="2022-07-26T07:36:16.022Z" user="cabie-sim">Auto (update-titles)</note>
                             <note type="updated" update="text-version" value="1.0.2" date-time="2022-07-26T07:39:34.204Z" user="cabie-sim">Auto (update-titles)</note>
+                            <note type="updated" update="text-version" value="1.0.3" date-time="2022-07-26T18:13:21.579Z" user="john">Provisionally pending discussion, some notes added to the dhāraṇī where there is obvious difference between the edited dhāraṇī and the Tibetan source text(s).</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -663,51 +664,83 @@
                                         <p rend="mantra" tid="43">
                         <mantra xml:lang="Sa-Ltn">“namo
                                                   ratna trayāya |<note place="end" xml:id="UT22084-090-041-58"> This opening homage
-                                                  to the Three Jewels is omitted in the recensions
-                                                  of Toh 597 in the Yongle, Narthang, Lhasa, and
-                                                  Stok Kangyurs. </note> oṃ namo bhagavate
+                                                    to the Three Jewels is omitted in the recensions
+                                                    of Toh 597 in the Yongle, Narthang, Lhasa, and
+                                                    Stok Kangyurs. </note> oṃ namo bhagavate
                                                   sarvatrailokyaprativiśiṣṭāya buddhāya te namaḥ |
                                                   tadyathā | <lb/> oṃ bhrūṃ bhrūṃ bhrūṃ śodhaya
                                                   śodhaya viśodhaya viśodhaya
                                                   asamasamantāvabhāsaspharaṇagatigagane
-                                                  svabhāvaviśuddhe | uṣṇīṣavijāyāpariśuddhe |
+                                                  svabhāvaviśuddhe | uṣṇīṣavijāyāpariśuddhe |<note place="end" xml:id="UT22084-090-041-200">This 
+                                                  phrase is present in the Yongle and Kanxi Kangyurs as well as in the Sanskrit manuscripts, but absent
+                                                  in the Degé and other Kangyurs in the version of the dhāraṇī in this text.</note>
                                                   abhiṣiñcantu māṃ sarvatathāgatāḥ
                                                   sugatavaravacanāmṛtābhiṣekair
-                                                  mahāmudrāmantrapadaiḥ | oṃ āhara āhara
+                                                  mahāmudrāmantrapadaiḥ | oṃ<note place="end" xml:id="UT22084-090-041-201">
+                                <foreign xml:lang="Sa-Ltn">oṃ</foreign> is present 
+                                                          here in the Sanskrit manuscripts and in the dhāraṇī of Toh 598, but absent
+                                                          in the Degé and other Kangyurs in the version of the dhāraṇī in this text and Tohs 594, 595, and 596.</note> 
+                                                  āhara āhara
                                                   āyuḥsaṃdhāraṇi śodhaya śodhaya viśodhaya viśodhaya
                                                   gaganasvabhāvaviśuddhe | uṣṇīṣavijayāpariśuddhe |
                                                   sahasraraśmisaṃcodite sarvatathāgatāvalokini
                                                   ṣaṭpāramitāparipūraṇi | sarvatathāgatamāte
                                                   daśabhūmipratiṣṭhite |
-                                                  sarvatathāgatahṛdayādhiṣṭhānādhiṣṭhite | oṃ mudre
-                                                  mudre | mahāmudre | vajrakāyasaṃhatanapariśuddhe
+                                                  sarvatathāgatahṛdayādhiṣṭhānādhiṣṭhite | oṃ<note place="end" xml:id="UT22084-090-041-202">
+                                <foreign xml:lang="Sa-Ltn">oṃ</foreign> is present 
+                                                          here in the Sanskrit manuscripts and in the dhāraṇī of Toh 598, but absent
+                                                          in the Degé and other Kangyurs in the version of the dhāraṇī in this text and Tohs 594, 595, and 596.</note> 
+                                                  mudre mudre | mahāmudre | vajrakāyasaṃhatanapariśuddhe
                                                   sarvakarmāvaraṇaviśuddhe | pratinivartaya
                                                   mamāyurviśuddhe |
                                                   sarvatathāgatasamayādhiṣṭhānādhiṣṭhite | oṃ muni
                                                   muni mahāmuni | vimuni vimuni mahāvimuni | mati
                                                   mati mahāmati mamati | sumati |
-                                                  tathatābhūtakoṭipariśuddhe visphuṭabuddhiśuddhe |
-                                                  oṃ he he | jaya jaya | vijaya vijaya smara smara
+                                                  tathatābhūtakoṭipariśuddhe visphuṭabuddhiśuddhe | oṃ<note place="end" xml:id="UT22084-090-041-203">
+                                <foreign xml:lang="Sa-Ltn">oṃ</foreign> is present 
+                                                          here in the Sanskrit manuscripts and in the dhāraṇī of Toh 598, but absent
+                                                          in the Degé and other Kangyurs in the version of the dhāraṇī in this text and Tohs 594, 595, and 596.</note> 
+                                                  he he | jaya jaya | vijaya vijaya smara smara
                                                   sphara sphara sphāraya sphāraya |
-                                                  sarvabuddhādhiṣṭhānādhiṣṭhite | oṃ śuddhe śuddhe
-                                                  buddhe buddhe vajre vajre mahāvajre |
+                                                  sarvabuddhādhiṣṭhānādhiṣṭhite | oṃ<note place="end" xml:id="UT22084-090-041-204">
+                                <foreign xml:lang="Sa-Ltn">oṃ</foreign> is present 
+                                                          here in the Sanskrit manuscripts and in the dhāraṇī of Toh 598, but absent
+                                                          in the Degé and other Kangyurs in the version of the dhāraṇī in this text and Tohs 594, 595, and 596.</note> 
+                                                  śuddhe śuddhe
+                                                  buddhe buddhe vajre vajre mahāvajre <note place="end" xml:id="UT22084-090-041-205">All Kangyurs here, in all texts that include 
+                                                          the dhāraṇī, add <foreign xml:lang="Sa-Ltn">suvajre</foreign>.</note>|
                                                   vajragarbhe | jayagarbhe | vijayagarbhe |
                                                   vajrajvālāgarbhe | vajrodbhave | vajrasaṃbhave |
                                                   vajre vajriṇi vajraṃ bhavatu mama śarīraṃ
-                                                  sarvasattvānāṃ ca | kāyapariśuddhir bhavatu mama
+                                                  sarvasattvānāṃ ca | kāyapariśuddhir bhavatu mama<note place="end" xml:id="UT22084-090-041-206">In place of <foreign xml:lang="Sa-Ltn">mama</foreign> here, Degé, 
+                                                          Stok Palace, and other Kangyurs all read <foreign xml:lang="Sa-Ltn">sadāme</foreign>, except for Yongle and Kanxi which have <foreign xml:lang="Sa-Ltn">sadame</foreign>.
+                                                          This is the case in all texts that include the dhāraṇī, except Toh 498 in which the phrase reads <foreign xml:lang="Sa-Ltn">kāyapariśuddhir bhavatu me sadā |
+                                                                  sarvagatipariśuddhiś ca.</foreign>
+                            </note>
                                                   sarvagatipariśuddhiś ca |
-                                                  sarvatathāgatahṛdayādhiṣṭhānādhiṣṭhite |
-                                                  sarvatathāgatāś ca samāśvāsayantu | oṃ budhya
-                                                  budhya sidhya sidhya bodhaya bodhaya <ref cRef="F.122.a" key="toh984" type="folio" xml:id="UT22084-090-041-186"/> vibodhaya vibodhaya
+                                                  sarvatathāgatahṛdayādhiṣṭhānādhiṣṭhite<note place="end" xml:id="UT22084-090-041-207">In place of <foreign xml:lang="Sa-Ltn">sarvatathāgatahṛdayādhiṣṭhānādhiṣṭhite</foreign> here, Degé
+                                                          and other Kangyurs read <foreign xml:lang="Sa-Ltn">samantāna mocaya mocaya | ādhiṣṭhāna</foreign>, Yongle and Kanxi have 
+                                                          <foreign xml:lang="Sa-Ltn">sarvatathāgatasamaya | ādhiṣṭhānādhiṣṭhite</foreign>, and Narthang, Lhasa, and Stok Palace omit the phrase altogether.
+                                                          In the other texts that include the dhāraṇī, the phrase is omitted in all Kangyurs.</note> |
+                                                sarvatathāgatāś ca samāśvāsayantu | oṃ<note place="end" xml:id="UT22084-090-041-208">
+                                <foreign xml:lang="Sa-Ltn">oṃ</foreign> is present 
+                                                        here in the Sanskrit manuscripts and in the dhāraṇī of Toh 598, but absent
+                                                        in the Degé and other Kangyurs in the version of the dhāraṇī in this text and Tohs 594, 595, and 596.</note> 
+                                                  budhya budhya sidhya sidhya bodhaya bodhaya <ref cRef="F.122.a" key="toh984" type="folio" xml:id="UT22084-090-041-186"/> vibodhaya vibodhaya
                                                   mocaya mocaya vimocaya vimocaya śodhaya śodhaya
-                                                  viśodhaya viśodhaya samantān mocaya mocaya
+                                                  viśodhaya viśodhaya samantān mocaya mocaya<note place="end" xml:id="UT22084-090-041-209">The phrase <foreign xml:lang="Sa-Ltn">samantān mocaya mocaya</foreign>
+                                                          is present in the Stok Palace Kangyur, reads <foreign xml:lang="Sa-Ltn">samantā mocaya mocaya</foreign> in the Narthang and Lhasa Kangyurs, and is absent 
+                                                          here in the Degé and other Kangyurs.</note>
                                                   samantaraśmipariśuddhe |
-                                                  sarvatathāgatahṛdayādhiṣṭhānādhiṣṭhite oṃ mudre
+                                                  sarvatathāgatahṛdayādhiṣṭhānādhiṣṭhite oṃ<note place="end" xml:id="UT22084-090-041-210">
+                                <foreign xml:lang="Sa-Ltn">oṃ</foreign> is present 
+                                                          here in the Sanskrit manuscripts and in the dhāraṇī of Toh 598, but absent
+                                                          in the Degé and other Kangyurs in the version of the dhāraṇī in this text and Tohs 594, 595, and 596.</note> mudre
                                                   mudre <ref cRef="F.245.b" key="toh597" type="folio" xml:id="UT22084-090-041-187"/>
                                                   mahāmudre mahāmudrāmantrapade svāhā<note place="end" xml:id="UT22084-090-041-60"> Hidas has
                                                   translated the dhāraṇī based on his edition, and
                                                   rather than retranslate it, we give his
-                                                  translation here: “<mantra xml:lang="en" type="dharani">Oṃ veneration to the glorious
+                                                  translation here: “<mantra xml:lang="en">Oṃ veneration to the glorious
                                                   Buddha distinguished in all the Three Worlds.
                                                   Namely, oṃ bhrūṃ bhrūṃ bhrūṃ, purge, purge,
                                                   purify, purify, O Unequalled Enveloping Splendor
