--- a/translations/kangyur/placeholders/064-005_toh235,657,1063-the_great_cloud.xml
+++ b/translations/kangyur/placeholders/064-005_toh235,657,1063-the_great_cloud.xml
@@ -8,17 +8,18 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">mahāmegha</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sprin chen po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamahāmegha</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sprin chen po</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sprin chen po/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sprin chen po</title>
                 <author role="translatorMain" ref="eft:team-37"/>
                 <author role="translatorEng" ref="eft:person-214">Joshua Capitanio</author>
                 <consultant role="projectManager" ref="eft:person-214">Joshua Capitanio</consultant>
                 <editor role="projectEditor" ref="eft:person-262">David Higgins</editor>
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -56,7 +57,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-01T10:02:30.107Z" user="admin">01/08/2022 10:02:30</note>
+                <note type="lastUpdated" date-time="2022-08-01T10:03:03.332Z" user="admin">01/08/2022 10:03:03</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-09-03T09:47:34.283Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2020-09-03T09:47:34.283Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -75,6 +76,7 @@
                 <note type="updated" update="translation-status" value="2.a" date-time="2022-07-23T13:23:43.802Z" user="martina-cotter">2.a</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-07-23T13:23:43.802Z" user="martina-cotter">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-08-01T10:02:22.438Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-01T10:02:55.628Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
