--- a/translations/kangyur/placeholders/090-005_toh561-the_great_amulet_queen_of_incantations.xml
+++ b/translations/kangyur/placeholders/090-005_toh561-the_great_amulet_queen_of_incantations.xml
@@ -11,16 +11,17 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamahāpratisarāvidyārajñi</title>
                 <title type="otherTitle" xml:lang="zh">《明咒妃大隨求母》（大正藏：《普遍光明清淨熾盛如意寶印心無能勝大明王大隨求陀羅尼經》）</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rig pa'i rgyal mo so so 'brang ba chen mo/</title>
-                <author role="translatorMain" ref="contributors.xml#team-9"/>
-                <editor role="associateEditor" ref="contributors.xml#person-141">Charles Hastings</editor>
-                <consultant role="projectManager" ref="contributors.xml#person-50">Andreas Doctor</consultant>
-                <editor role="projectEditor" ref="contributors.xml#person-74">Ryan Damron</editor>
-                <author role="translatorEng" ref="contributors.xml#person-51">James Gentry</author>
-                <editor role="reviser" ref="contributors.xml#person-50">Andreas Doctor</editor>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chökyi Nyima Rinpoche</consultant>
+                <author role="translatorMain" ref="eft:team-9"/>
+                <editor role="associateEditor" ref="eft:person-141">Charles Hastings</editor>
+                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
+                <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
+                <author role="translatorEng" ref="eft:person-51">James Gentry</author>
+                <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
+                <consultant role="dharmaMaster" ref="eft:person-40">Chökyi Nyima Rinpoche</consultant>
+                <editor role="copyEditor" ref="eft:person-273">Janna White</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2019</date>
+                <edition>v 0.0.7 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -40,13 +41,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-09T15:14:07.071Z" user="admin">09/06/2022 15:14:07</note>
+                <note type="lastUpdated" date-time="2022-08-02T09:08:15.598Z" user="admin">02/08/2022 09:08:15</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:23:41.721Z" user="mike">2.d</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-08T10:24:15.249Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-07-08T10:24:57.808Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2021-07-08T10:25:18.405Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2021-07-08T10:25:40.58Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-08-02T09:08:13.592Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
