--- a/translations/kangyur/placeholders/076-008_toh354-the_sutra_teaching_the_causes_and_effects_of_good_and_ill.xml
+++ b/translations/kangyur/placeholders/076-008_toh354-the_sutra_teaching_the_causes_and_effects_of_good_and_ill.xml
@@ -16,10 +16,10 @@
                 <editor role="associateEditor" ref="contributors.xml#person-349">Joie Chen</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.6 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-076-008"/>
                 <date/>
             </publicationStmt>
@@ -35,14 +35,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-04-25T11:26:01.059Z" user="admin">25/04/2022 11:26:01</note>
+                <note type="lastUpdated" date-time="2022-08-02T10:04:28.023Z" user="admin">02/08/2022 10:04:28</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2020-05-19T13:19:24.741Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="translation-status" value="3" date-time="2020-05-19T13:19:24.741Z" user="line-tofte">3</note>
     <note type="updated" update="translation-status" value="2.h" date-time="2020-11-10T07:58:02.61Z" user="line-tofte">2.h</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-10T07:58:02.61Z" user="line-tofte">Auto (update-publication-status)</note>
     <note type="updated" update="translation-status" value="2.g" date-time="2021-05-25T12:17:41.075Z" user="line-tofte">2.g</note>
     <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-25T12:17:41.075Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-05-25T12:18:28.139Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-04-25T11:25:53.463Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-25T11:25:53.463Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="text-version" value="0.0.4" date-time="2021-05-25T12:18:28.139Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-04-25T11:25:53.463Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-25T11:25:53.463Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.d" date-time="2022-08-02T10:04:20.283Z" user="line-tofte">2.d</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2022-08-02T10:04:20.283Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
