--- a/translations/kangyur/placeholders/076-008_toh354-the_sutra_teaching_the_causes_and_effects_of_good_and_ill.xml
+++ b/translations/kangyur/placeholders/076-008_toh354-the_sutra_teaching_the_causes_and_effects_of_good_and_ill.xml
@@ -4,19 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">legs nyes kyi rgyu dang 'bras bu bstan pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra Teaching the Causes and Effects of Good and Ill</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">legs nyes kyi rgyu dang 'bras bu bstan pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa legs nyes kyi rgyu dang 'bras bu bstan pa zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="contributors.xml#team-52"/>
-                <author role="translatorEng" ref="contributors.xml#person-67">Lowell Cook</author>
-                <consultant role="projectManager" ref="contributors.xml#person-67">Lowell Cook</consultant>
-                <author role="translatorEng" ref="contributors.xml#person-339">Jessica Locke</author>
-                <editor role="projectEditor" ref="contributors.xml#person-250">Rory Lindsay</editor>
-                <editor role="associateEditor" ref="contributors.xml#person-349">Joie Chen</editor>
+                <author role="translatorMain" ref="eft:team-52"/>
+                <author role="translatorEng" ref="eft:person-67">Lowell Cook</author>
+                <consultant role="projectManager" ref="eft:person-67">Lowell Cook</consultant>
+                <author role="translatorEng" ref="eft:person-339">Jessica Locke</author>
+                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
+                <editor role="associateEditor" ref="eft:person-349">Joie Chen</editor>
+                <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2020</date>
+                <edition>v 0.0.7 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.d">
@@ -35,14 +36,19 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-02T10:04:28.023Z" user="admin">02/08/2022 10:04:28</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-05-19T13:19:24.741Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="3" date-time="2020-05-19T13:19:24.741Z" user="line-tofte">3</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2020-11-10T07:58:02.61Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-10T07:58:02.61Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2.g" date-time="2021-05-25T12:17:41.075Z" user="line-tofte">2.g</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-25T12:17:41.075Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-05-25T12:18:28.139Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-04-25T11:25:53.463Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-25T11:25:53.463Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.d" date-time="2022-08-02T10:04:20.283Z" user="line-tofte">2.d</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2022-08-02T10:04:20.283Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-08-02T10:05:05.719Z" user="admin">02/08/2022 10:05:05</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-05-19T13:19:24.741Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2020-05-19T13:19:24.741Z" user="line-tofte">3</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2020-11-10T07:58:02.61Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-10T07:58:02.61Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2021-05-25T12:17:41.075Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-25T12:17:41.075Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-05-25T12:18:28.139Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-04-25T11:25:53.463Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-25T11:25:53.463Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-08-02T10:04:20.283Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-08-02T10:04:20.283Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-08-02T10:04:58.067Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
