--- a/translations/kangyur/placeholders/076-009_toh355-the_sutra_that_teaches_the_ripening_of_virtuous_and_nonvirtuous_actions.xml
+++ b/translations/kangyur/placeholders/076-009_toh355-the_sutra_that_teaches_the_ripening_of_virtuous_and_nonvirtuous_actions.xml
@@ -15,10 +15,10 @@
                 <editor role="associateEditor" ref="contributors.xml#person-349">Joie Chen</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.6 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-076-009"/>
                 <date/>
             </publicationStmt>
@@ -34,14 +34,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-04-25T11:41:24.556Z" user="admin">25/04/2022 11:41:24</note>
+                <note type="lastUpdated" date-time="2022-08-02T10:06:55.881Z" user="admin">02/08/2022 10:06:55</note>
             
     <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-22T10:18:04.685Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="translation-status" value="2.h" date-time="2020-11-10T08:00:09.539Z" user="line-tofte">2.h</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-10T08:00:09.539Z" user="line-tofte">Auto (update-publication-status)</note>
     <note type="updated" update="translation-status" value="2.g" date-time="2021-05-25T12:15:45.652Z" user="line-tofte">2.g</note>
     <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-25T12:15:45.652Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-05-25T12:16:27.871Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-04-25T11:41:16.911Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-25T11:41:16.911Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="text-version" value="0.0.4" date-time="2021-05-25T12:16:27.871Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-04-25T11:41:16.911Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-25T11:41:16.911Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.d" date-time="2022-08-02T10:06:48.111Z" user="line-tofte">2.d</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2022-08-02T10:06:48.111Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
